# assoc-commut-formulae

./: CHANGELOG.md  assoc-commut-formulae.cabal
src/: AssocCommutFormulae.hs
src/AssocCommutFormulae/: Internal.hs
test/: Main.hs
