cabal-version:      3.4
name:               assoc-commut-formulae
version:            0.1.0.0
synopsis:
    Generator of formulae with associative and commutative operators.
description:
    Systematically generate all formulae with a single constant symbol and the
    given number of binary, associative and commutative operators.
license:            MIT
license-file:       LICENSE
author:             Pavol Vargovcik
maintainer:         pavol.vargovcik@gmail.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      AssocCommutFormulae
      AssocCommutFormulae.Internal
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
    hs-source-dirs:   src
    default-language: GHC2021

test-suite assoc-commut-formulae-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.0.0,
        assoc-commut-formulae
